--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test-local
+spring.profiles.active=online
 
 spring.http.encoding.charset=utf-8
 spring.http.encoding.force=true
