--- a/src/main/resources/application-online.properties
+++ b/src/main/resources/application-online.properties
@@ -1,2 +1,67 @@
 #redis¼¯Èºhosts
 redis.hosts = 172.16.25.11:7000
+
+spring.jpa.database=mysql
+spring.datasource.mysql.jdbc-url=jdbc:mysql://172.16.25.13:3306/fmsmp?useUnicode=true&characterEncoding=utf8&useSSL=false&requireSSL=false
+spring.datasource.mysql.username=zcsupervise
+spring.datasource.mysql.password=zcsupervise
+spring.datasource.mysql.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.mysql.min-idle=5
+spring.datasource.mysql.max-idle=50
+spring.datasource.mysql.mysql.tomcat.max-wait=10000
+spring.datasource.mysql.tomcat.max-active=50
+spring.datasource.mysql.tomcat.test-on-borrow=true
+spring.datasource.mysql.max-active=30
+spring.datasource.mysql.testOnBorrow=true
+spring.datasource.mysql.validationQuery=SELECT 1
+
+logging.file=/var/log/gyjg/gyjg.log
+
+server.port=44444
+
+
+oracle.user=zckj
+oracle.password=ZCKJ2018
+oracle.driver=jdbc:oracle:thin:@172.16.17.82:1521:gyjg
+
+
+hive.import.exam.ks.result=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/time_paration_exam_ks_result_temp|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|XH|--where|1=1|--query|"SELECT result.*,to_char(result.JSSJ,'yyyy-MM-dd') as day ,to_char(result.JSSJ,'yyyy-MM') as month FROM GYJG.VM_JG_EXAM_KS_RESULT result where result.JSSJ> to_date(to_char(sysdate-1,'yyyy-mm-dd'), 'yyyy-mm-dd') AND result.JSSJ <= to_date(to_char(sysdate,'yyyy-mm-dd'), 'yyyy-mm-dd') AND $CONDITIONS"
+hive.load.exam.ks.result= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/import/load_exam_ks_result.sql
+
+hive.import.schoolinfo=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/v_jg_drv_schoolinfo|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|xh|--where|"1=1"|--query|"SELECT * FROM GYJG.VM_JG_EXAM_SCHOOLINFO WHERE $CONDITIONS"
+hive.load.schoolinfo= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/import/load_schoolinfo.sql
+
+hive.import.perasign=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/exam_drv_perasign_temp|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|XH|--where|"1=1"|--query|"SELECT result.*, to_char(result.ykrq,'yyyy-MM-dd') as day, result.dlr as jxdm FROM GYJG.VM_JG_EXAM_DRV_PREASIGN result where $CONDITIONS"
+hive.load.perasign=hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/import/load_exam_preasign.sql
+
+hive.select.m_absent_examinee= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/m_absent_examinee.sql
+hive.select.exam_mid_result= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/exam_mid_result.sql
+hive.select.exam_mid_perasign= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/exam_mid_perasign.sql
+hive.select.t_examroom_exam_statistics= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/t_examroom_exam_statistics.sql
+hive.select.m_station_statistics= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/m_station_statistics.sql
+hive.select.m_mutil_examinee= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/m_mutil_examinee.sql
+hive.select.school_mid_count= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/school_mid_count.sql
+hive.select.m_driving_school_total= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/m_driving_school_total.sql
+hive.select.m_driving_school_statistics= hive|-f|/var/lib/hadoop-hdfs/gyjg/everyday/select/m_driving_school_statistics.sql
+
+
+sqoop.export.t_examroom_exam_statistics=sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/t_examroom_exam_statistics/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|t_examroom_exam_statistics|--columns|"examroom_code, examroom_date, subscribe_count, exam_count, pass_count, pass_rate, missing_count, absent_rate, manual_audit_count, manual_audit_rate, update_time"
+sqoop.export.m_absent_examinee=sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/m_absent_examinee/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|m_absent_examinee|--columns|"examinee_name, identity_code, examroom_code, exam_date, update_time"
+sqoop.export.m_station_statistics=sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/m_station_statistics/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|m_station_statistics|--columns|"examroom_code, station_code, exam_date, exam_count, pass_count, station_pass_rate, update_time"
+sqoop.export.m_mutil_examinee=sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/m_mutil_examinee/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|m_mutil_examinee|--columns|"examinee_name, identity_card, examroom_code, update_time"
+sqoop.export.m_driving_school_total= sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/m_driving_school_total/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|m_driving_school_total|--columns|"school_count, in_school_count, graduate_count, pass_rate, update_time"
+sqoop.export.m_driving_school_statistics=sqoop|export|--connect|"jdbc:mysql://172.16.25.13:3306/fmsmp"|--username|zcsupervise|--password|zcsupervise|-m|1|--export-dir|/user/hive/warehouse/gyjg.db/m_driving_school_statistics/|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--table|m_driving_school_statistics|--columns|"school_code, school_name, in_school_sdudent, in_school_rate, graduate_count, graduate_rate, sub_one_rate, sub_one_rank, sub_two_rate, sub_two_rank, sub_three_rate, sub_three_rank, sub_four_rate, sub_four_rank, one_pass_rate, extra_pass_rate, unpass_rate, update_time"
+
+
+repair.hive.import.exam.ks.result=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/time_paration_exam_ks_result_temp|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|XH|--where|1=1|--query|"SELECT result.*,to_char(result.JSSJ,'yyyy-MM-dd') as day ,to_char(result.JSSJ,'yyyy-MM') as month FROM GYJG.VM_JG_EXAM_KS_RESULT result where result.JSSJ> to_date(to_char(sysdate-<<history_days_num>>,'yyyy-mm-dd'), 'yyyy-mm-dd') AND result.JSSJ <= to_date(to_char(sysdate+1-<<history_days_num>>,'yyyy-mm-dd'), 'yyyy-mm-dd') AND $CONDITIONS"
+repair.hive.select= hive|-f|/tmp/select.sql
+
+repair.hive.select.m_absent_examinee= /var/lib/hadoop-hdfs/gyjg/repair/select/m_absent_examinee.sql
+repair.hive.select.exam_mid_result= /var/lib/hadoop-hdfs/gyjg/repair/select/exam_mid_result.sql
+repair.hive.select.exam_mid_perasign= /var/lib/hadoop-hdfs/gyjg/repair/select/exam_mid_perasign.sql
+repair.hive.select.t_examroom_exam_statistics= /var/lib/hadoop-hdfs/gyjg/repair/select/t_examroom_exam_statistics.sql
+repair.hive.select.m_station_statistics= /var/lib/hadoop-hdfs/gyjg/repair/select/m_station_statistics.sql
+repair.hive.select.m_mutil_examinee= /var/lib/hadoop-hdfs/gyjg/repair/select/m_mutil_examinee.sql
+repair.hive.select.school_mid_count= /var/lib/hadoop-hdfs/gyjg/repair/select/school_mid_count.sql
+repair.hive.select.m_driving_school_total= /var/lib/hadoop-hdfs/gyjg/repair/select/m_driving_school_total.sql
+repair.hive.select.m_driving_school_statistics= /var/lib/hadoop-hdfs/gyjg/repair/select/m_driving_school_statistics.sql
