修复考场统计表未导出异常

--- a/src/main/resources/application-online.properties
+++ b/src/main/resources/application-online.properties
@@ -25,7 +25,7 @@ oracle.password=ZCKJ2018
 oracle.driver=jdbc:oracle:thin:@172.16.17.82:1521:gyjg
 
 
-hive.import.exam.ks.result=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/time_paration_exam_ks_result_temp|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|XH|--where|1=1|--query|"SELECT result.*,to_char(result.JSSJ,'yyyy-MM-dd') as day ,to_char(result.JSSJ,'yyyy-MM') as month FROM GYJG.VM_JG_EXAM_KS_RESULT result where result.JSSJ> to_date(to_char(sysdate-1,'yyyy-mm-dd'), 'yyyy-mm-dd') AND result.JSSJ <= to_date(to_char(sysdate,'yyyy-mm-dd'), 'yyyy-mm-dd') AND $CONDITIONS"
+hive.import.exam.ks.result=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/time_paration_exam_ks_result_temp|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|XH|--where|1=1|--query|"SELECT result.*,to_char(result.JSSJ,'yyyy-MM-dd') as day ,to_char(result.JSSJ,'yyyy-MM') as month FROM GYJG.VM_JG_EXAM_KS_RESULT result where result.JSSJ> to_date(to_char(sysdate-1,'yyyy-mm-dd'), 'yyyy-mm-dd') AND result.JSSJ < to_date(to_char(sysdate,'yyyy-mm-dd'), 'yyyy-mm-dd') AND $CONDITIONS"
 hive.load.exam.ks.result= hive|-f|/var/lib/hadoop-hdfs/gyjg/every_day/import/load_exam_ks_result.sql
 
 hive.import.schoolinfo=sqoop|import|--connect|"jdbc:oracle:thin:@172.16.17.82:1521:gyjg"|--username|zckj|--password|ZCKJ2018|-m|1|--target-dir|/user/admin/gyjg/temp/v_jg_drv_schoolinfo|--delete-target-dir|--fields-terminated-by|"\\t"|--lines-terminated-by|"\\n"|--split-by|xh|--where|"1=1"|--query|"SELECT * FROM GYJG.VM_JG_EXAM_SCHOOLINFO WHERE $CONDITIONS"
